maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
override def run() {
^JediEscaper:2: error: expected start of definition
override def run() {
         ^JediEscaper:42: error: expected class or object definition
def chercheDir():Direction = {
^JediEscaper:64: error: expected class or object definition
def noterInd(i,j) = {
^JediEscaper:70: error: Missing closing brace `}' assumed here
  if ((j+1<ym) && !aMurNord(i,j+1) && (getIndication(i,j+1)<min)) {
  ^JediEscaper:72: error: Missing closing brace `}' assumed here
  if ((i+1<xm) && !aMurOuest(i+1,j) && (getIndication(i+1,j)<min)) {
  ^